@@ -1235,9 +1235,11 @@ bool Gui::any_stockpile_hotkey(df::viewscreen* top)
 }
 
 df::building_stockpilest* Gui::getAnyStockpile(df::viewscreen* top) {
-    if (matchFocusString("dwarfmode/Some/Stockpile")) {
+    if (auto dfscreen = dfhack_viewscreen::try_cast(top))
+        return dfscreen->getSelectedStockpile();
+
+    if (game->main_interface.bottom_mode_selected == main_bottom_mode_type::STOCKPILE)
         return game->main_interface.stockpile.cur_bld;
-    }
 
     return NULL;
 }
@@ -1256,9 +1258,12 @@ bool Gui::any_civzone_hotkey(df::viewscreen* top) {
 }
 
 df::building_civzonest *Gui::getAnyCivZone(df::viewscreen* top) {
-    if (matchFocusString("dwarfmode/Zone")) {
+    if (auto dfscreen = dfhack_viewscreen::try_cast(top))
+        return dfscreen->getSelectedCivZone();
+
+    if (game->main_interface.bottom_mode_selected == main_bottom_mode_type::ZONE)
         return game->main_interface.civzone.cur_bld;
-    }
+
     return NULL;
 }
 
@@ -1273,8 +1278,6 @@ df::building_civzonest *Gui::getSelectedCivZone(color_ostream &out, bool quiet) 
 
 df::building *Gui::getAnyBuilding(df::viewscreen *top)
 {
-    using df::global::game;
-
     if (auto dfscreen = dfhack_viewscreen::try_cast(top))
         return dfscreen->getSelectedBuilding();
 
